Normalisation du code back-end, modification du json user envoyé par l'API, et implémentation de la validation des reviews par les modérateurs